@startuml

class "ProjectFormViewModel" as pf {
    - _newProjectValidator
    - _projectViewModelFactory
    - _projectRepository
    - _selectedProject : Project
    + SelectedProject : Project
    + Projects : ObservableCollection<SelectedListContainer<ProjectViewModel>>
    + IsCanAdd
    + NewProjectName : string
    + CloseProjectFormCommand
    + AddProjectCommand
    + AddProject()
    + Validate()
    + Closed : EventHandler
}

class "SelectedListContainer<T>" as container {
    + IsSelected
    + Item : T
}

class "ProjectViewModel" as projectVM {
    - _project
    + IsEmpty
    + Name
    + Id
}

pf "1" --> "*" container

container ..> projectVM : "T"

interface "ProjectRepository" as pr {
    + Contains(string)
    + Contains(Project)
    + GetId()
    + AddProject(Project)
    + UpdateProject(Project)
    + RemoveProject(Project)
    + GetProjects()
    + GetProject(int Id)
    + GetProject(string name)
}

pf --> pr



@enduml